--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "^5.0.4"
 psycopg2 = "^2.9.9"
 pillow = "^10.3.0"
 ipython = "^8.23.0"
 django-stubs = "^4.2.7"
 pytils = "^0.4.1"
+django = "4.2.2"
 
 
 [build-system]
